Commits & files UI: SUI fixed single line table
Instead using own ellipsis, uses Semantic UI fixed single line table which
effectively applies ellipsis to all overflowing table cells.

NOTE: File list cannot use colspan="2" for 1st "Last commit" elements,
otherwise layout breaks with fixed table.

--- a/public/less/_repository.less
+++ b/public/less/_repository.less
@@ -143,24 +143,11 @@
 		}
 
 		#repo-files-table {
-			.table.list {
-				width: 80% !important;
-			}
-
 			thead {
 				th {
 					padding-top: 8px;
 					padding-bottom: 5px;
 					font-weight: normal;
-
-					#last-commit-message {
-						margin-left: 5px;
-						margin-bottom: -4px;
-						width: 400px;
-					}
-					.age {
-						margin-top: 2px;
-					}
 				}
 				.ui.avatar {
 					margin-bottom: 5px;
@@ -168,21 +155,7 @@
 			}
 			tbody {
 				.icon {
-					margin-left: 5px;
-				}
-				.name {
-					max-width: 120px;
-				}
-				.message {
-			    max-width: 300px;
-				}
-				.age {
-					min-width: 150px;
-				}
-
-				.text.truncate {
-					margin-bottom: -5px;
-					max-width: 100%;
+					margin-right: 5px;
 				}
 			}
 			td {
@@ -608,26 +581,6 @@
 					}
 				}
 			}
-		}
-	}
-	.commits.table {
-		font-size: 13px;
-		th, td {
-			&:first-child {
-				padding-left: 15px;
-			}
-		}
-		td {
-			line-height: 15px;
-		}
-		.author {
-			min-width: 180px;
-		}
-		.message span {
-			max-width: 500px;
-		}
-		.date {
-	    width: 120px;
 		}
 	}
 
